--- a/ex8.html
+++ b/ex8.html
@@ -8,8 +8,8 @@
 <body>
     <h1>CatPhotoApp</h1>
     <h2>CatphotoApp</h2>
-    <p>Everyone loves <a>cute cat</a> online!</p>
-    <p>See more <a>cat photos</a> in our gallery</p>
+    <p>Everyone loves <a href="">cute cat</a> online!</p>
+    <p>See more <a href="">cat photos</a> in our gallery</p>
     <img height="300" width="300" src="https://media.4-paws.org/d/2/5/f/d25ff020556e4b5eae747c55576f3b50886c0b90/cut%20cat%20serhio%2002-1813x1811-720x719.jpg" alt="">
     <h2>Cat list</h2>
     <h3>Things cats loves:</h3>
